...
            </objects>
            <point key="canvasLocation" x="2992.8000000000002" y="-1119.4902548725638"/>
        </scene>
        <!--Chart-->
        <scene sceneID="fnM-Lm-lR5">
            <objects>
                <viewController title="Chart" id="W5Q-4Q-bww" customClass="LineChartViewController" customModule="CensusAPI" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="GIZ-Tk-F1b"/>
                        <viewControllerLayoutGuide type="bottom" id="rsz-JY-l59"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="4Dt-jl-k8Z">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                            <constraint firstItem="UiI-rL-o4e" firstAttribute="leading" secondItem="qnc-ix-HGm" secondAttribute="leading" id="vxu-nQ-spG"/>
                            <constraint firstAttribute="trailing" secondItem="UiI-rL-o4e" secondAttribute="trailing" id="xmI-Ku-KkS"/>
                        </constraints>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Title" id="Zl5-Tw-Xu5">
                        <barButtonItem key="rightBarButtonItem" title="Graph It!" id="elr-qD-fcf">
                            <connections>
                                <action selector="graphIt:" destination="tZu-T0-qgz" id="NGq-ts-VVt"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="ocL-l7-zLG">
                                                    <rect key="frame" x="8" y="8" width="327" height="35.5"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cubic Smoothing" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LSY-Oi-CBy">
                                                            <rect key="frame" x="0.0" y="0.0" width="275" height="35.5"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lUp-Ti-v8R">
...
                            <constraint firstItem="OJA-Jc-Fg9" firstAttribute="bottom" secondItem="BdZ-Dy-BgT" secondAttribute="top" id="8O4-7f-G1v"/>
                            <constraint firstItem="OJA-Jc-Fg9" firstAttribute="leading" secondItem="GGh-2n-QwI" secondAttribute="leadingMargin" id="J2a-WM-3jB"/>
                            <constraint firstItem="OJA-Jc-Fg9" firstAttribute="top" secondItem="pvQ-r2-Dmu" secondAttribute="bottom" id="fww-un-dZv"/>
                            <constraint firstItem="OJA-Jc-Fg9" firstAttribute="trailing" secondItem="GGh-2n-QwI" secondAttribute="trailingMargin" id="jUl-zn-gEe"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Help" image="icons8-Help-30" selectedImage="icons8-Help Filled-30" id="DAe-qO-OmQ"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="3gk-A5-ZIu" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1575" y="564"/>
        </scene>
        <!--Scatter Plot Topics-->
...
            <point key="canvasLocation" x="-1575" y="-264"/>
        </scene>
        <!--Settings-->
        <scene sceneID="HCl-bk-2GD">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wn9-Lr-csP" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="icons8-Settings-30" selectedImage="icons8-Settings Filled-30" id="HR3-Db-XKh"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="117-pJ-Vi5">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
